--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "format:check": "npx prettier --check \"**/*.{js,ts,vue,json}\"",
-    "format": "npx prettier --write \"**/*.{js,ts,vue,json}\""
+    "format": "npx prettier --write \"**/*.{js,ts,vue,json}\"",
+    "lint": "eslint . --ext .js,.ts,.vue",
+    "lint:fix": "eslint . --ext .js,.ts,.vue --fix"
   },
   "engines": {
     "node": ">=19.0.0"
@@ -49,9 +51,16 @@
   "devDependencies": {
     "@capacitor/cli": "^6.2.1",
     "@nuxtjs/leaflet": "^1.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-vue": "^10.1.0",
     "prettier": "^3.5.3",
     "vite-plugin-vuetify": "^2.1.0",
+    "vue-eslint-parser": "^10.1.3",
     "vuetify": "^3.7.19"
   }
 }
