--- a/package.json
+++ b/package.json
@@ -36,21 +36,29 @@
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.10.1",
     "@types/node": "^22.13.14",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "date-fns": "^4.1.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
+    "luxon": "^3.6.1",
     "maplibre-gl": "^4.7.1",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "sass": "^1.86.0",
     "vite-plugin-checker": "^0.9.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.8"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.2.1",
     "@nuxtjs/leaflet": "^1.2.6",
+    "@types/luxon": "^3.6.2",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "@vue/eslint-config-prettier": "^10.2.0",
