--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.11.0",
     "@types/node": "^22.13.14",
+    "@vueuse/core": "^13.1.0",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-luxon": "^1.3.1",
@@ -47,13 +48,13 @@
     "luxon": "^3.6.1",
     "maplibre-gl": "^4.7.1",
     "nuxt": "^3.17.1",
-    "sass": "^1.87.0",
     "pinia": "^3.0.2",
+    "sass": "^1.87.0",
     "vite-plugin-checker": "^0.9.1",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
-    "vue-tsc": "^2.2.10",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-tsc": "^2.2.10"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.2.0",
