--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install
+        npm install --ignore-scripts
+        npm run prepare
 
     - name: Run ESLint
       run: |
