chore: update workflow/lint 3

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,10 @@ jobs:
 
     - name: Install dependencies
       run: |
+        npm config set platform=linux
+        npm config set arch=x64
         npm install --ignore-scripts
+        npm rebuild oxc-parser
         npx nuxt prepare
 
     - name: Run ESLint
