chore: update workflow/lint 4

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,9 +18,10 @@ jobs:
         node-version: '22' # Needs to manually be updated
 
     - name: Install dependencies
+      env:
+        npm_config_platform: linux
+        npm_config_arch: x64
       run: |
-        npm config set platform=linux
-        npm config set arch=x64
         npm install --ignore-scripts
         npm rebuild oxc-parser
         npx nuxt prepare
