--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,4 @@
+
 name: Lint Code
 
 on:
@@ -10,17 +11,22 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20' # Needs to manually be updated
+        node-version: '20'
+        cache: 'npm'
 
     - name: Install dependencies
       run: |
-        npm install
+        npm ci --no-optional
+        npm install eslint@8 --save-dev --no-save
+
+    - name: Prepare Nuxt
+      run: |
+        npx nuxt prepare || echo "Nuxt prepare failed, continuing with lint"
 
     - name: Run ESLint
-      run: |
-        npm run lint
+      run: npm run lint
