--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,3 @@
-
 name: Lint Code
 
 on:
@@ -16,17 +15,11 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20'
+        node-version: '22' 
         cache: 'npm'
 
-    - name: Install dependencies
-      run: |
-        npm ci --no-optional
-        npm install eslint@8 --save-dev --no-save
-
-    - name: Prepare Nuxt
-      run: |
-        npx nuxt prepare || echo "Nuxt prepare failed, continuing with lint"
+    - name: Install dependencies (skip scripts)
+      run: npm ci --ignore-scripts --no-optional
 
     - name: Run ESLint
       run: npm run lint
