--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+
+      - name: Clean node_modules and package-lock.json (workaround for Rollup bug)
+        run: rm -rf node_modules package-lock.json
+
       - name: Install dependencies
         run: npm ci
 
