--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,11 @@ jobs:
         run: rm -rf node_modules package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install --ignore-scripts
+          npm install @rollup/rollup-linux-x64-gnu
+          npx nuxt prepare
 
       - name: Build site
         run: npm run build
