--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,7 +18,11 @@ jobs:
           node-version: '22' # Needs to manually be updated
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install --ignore-scripts
+          npm install @rollup/rollup-linux-x64-gnu
+          npx nuxt prepare
 
       - name: Run Prettier check
         run: npm run format:check
