Unified docker compose added
- temprary Readme added for feedback
- restructured the folders as agreed
- the webiste runs on 3000, the API on 3001 locally
- env variables are in the .env.development but that is ignored, example provided

--- a/apps/website/Dockerfile
+++ b/apps/website/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY package.json package-lock.json .npmrc ./
 
 RUN npm install --ignore-scripts \
-  && npm install @rollup/rollup-linux-x64-musl \
+  && npm install rollup \
   && npm rebuild \
   && npm run prepare
 
