--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log*
 lerna-debug.log*
 
 # OS
-.DS_Store
+**/.DS_Store
 
 # Tests
 /coverage
@@ -39,6 +39,7 @@ lerna-debug.log*
 .env
 .env.production
 .env.staging
+**/.env.development
 .env.development.local
 .env.test.local
 .env.production.local
