restore website docker-compose

--- a/apps/website/docker-compose.yml
+++ b/apps/website/docker-compose.yml
@@ -3,15 +3,13 @@ services:
     container_name: ag-map-client
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      target: build
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
-      - /app/.cache
+      - .nuxt:/app/.nuxt
     command: npm run dev
     environment:
       - HOST=0.0.0.0
-      - PORT=3000
-      - NODE_ENV=development
