--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -3,6 +3,8 @@ name: Prettier Check
 on:
   pull_request:
     branches: [main, 'development']
+    paths:
+      - 'apps/**'
 
 jobs:
   check-prettier-website:
@@ -12,8 +14,32 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check if website files changed
+        id: website-changes
+        run: |
+          echo "Checking changes in apps/website..."
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            git fetch origin ${{ github.event.pull_request.base.ref }}
+            # diff between base and head commits in the PR
+            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/website/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            # For push events, compare latest two commits
+            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/website/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          fi
 
       - name: Set up Node.js
+        if: steps.website-changes.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -21,6 +47,7 @@ jobs:
           cache-dependency-path: apps/website/package-lock.json
 
       - name: Install website dependencies
+        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: |
           rm -rf node_modules package-lock.json
@@ -29,6 +56,7 @@ jobs:
           npx nuxt prepare
 
       - name: Run Prettier check on website
+        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: npm run format:check
 
@@ -39,8 +67,31 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Detect if API files changed
+        id: api-changes
+        run: |
+          echo "Checking changes in apps/api..."
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            git fetch origin ${{ github.event.pull_request.base.ref }}
+            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/api/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/api/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          fi
+
 
       - name: Set up Node.js
+        if: steps.api-changes.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -48,9 +99,11 @@ jobs:
           cache-dependency-path: apps/api/package-lock.json
 
       - name: Install API dependencies
+        if: steps.api-changes.outputs.changed == 'true'
         working-directory: apps/api
         run: npm install
 
       - name: Run Prettier check on API
+        if: steps.api-changes.outputs.changed == 'true'
         working-directory: apps/api
         run: npm run format:check
