--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,14 +8,35 @@ jobs:
   lint-website:
     name: Lint Website (Frontend)
     runs-on: ubuntu-latest
-    # Only run if website files changed (optional - remove if you want to always run)
-    # if: github.event_name == 'pull_request' || contains(github.event.head_commit.modified, 'apps/website/') || contains(github.event.head_commit.added, 'apps/website/')
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # needed for full git history for diff
+      
+      - name: Detect if website files changed
+        id: website-changes
+        run: |
+          echo "Checking changes in apps/website..."
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            git fetch origin ${{ github.event.pull_request.base.ref }}
+            # diff between base and head commits in the PR
+            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/website/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            # For push events, compare latest two commits
+            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/website/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          fi
 
       - name: Set up Node.js
+        if: steps.website-changes.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -23,6 +44,7 @@ jobs:
           cache-dependency-path: apps/website/package-lock.json
 
       - name: Install website dependencies
+        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: |
           rm -rf node_modules package-lock.json
@@ -31,20 +53,40 @@ jobs:
           npx nuxt prepare
 
       - name: Run ESLint on website
+        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: npm run lint
 
   lint-api:
     name: Lint API (Backend)
     runs-on: ubuntu-latest
-    # Only run if API files changed (optional - remove if you want to always run)
-    # if: github.event_name == 'pull_request' || contains(github.event.head_commit.modified, 'apps/api/') || contains(github.event.head_commit.added, 'apps/api/')
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Detect if API files changed
+        id: api-changes
+        run: |
+          echo "Checking changes in apps/api..."
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            git fetch origin ${{ github.event.pull_request.base.ref }}
+            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/api/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/api/'; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          fi
 
       - name: Set up Node.js
+        if: steps.api-changes.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -52,9 +94,11 @@ jobs:
           cache-dependency-path: apps/api/package-lock.json
 
       - name: Install API dependencies
+        if: steps.api-changes.outputs.changed == 'true'
         working-directory: apps/api
         run: npm install
 
       - name: Run ESLint on API
+        if: steps.api-changes.outputs.changed == 'true'
         working-directory: apps/api
         run: npm run lint
