--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -60,50 +60,52 @@ jobs:
         working-directory: apps/website
         run: npm run format:check
 
-  check-prettier-api:
-    name: Check Prettier - API
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+# temporary disabled format check for api to avoid conflicts with existing PRs
+#   check-prettier-api:
+#     name: Check Prettier - API
+#     runs-on: ubuntu-latest
 
-      - name: Detect if API files changed
-        id: api-changes
-        run: |
-          echo "Checking changes in apps/api..."
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            git fetch origin ${{ github.event.pull_request.base.ref }}
-            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/api/'; then
-              echo "changed=true" >> $GITHUB_OUTPUT
-            else
-              echo "changed=false" >> $GITHUB_OUTPUT
-            fi
-          else
-            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/api/'; then
-              echo "changed=true" >> $GITHUB_OUTPUT
-            else
-              echo "changed=false" >> $GITHUB_OUTPUT
-            fi
-          fi
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+
+#       - name: Detect if API files changed
+#         id: api-changes
+#         run: |
+#           echo "Checking changes in apps/api..."
+#           if [ "${{ github.event_name }}" = "pull_request" ]; then
+#             git fetch origin ${{ github.event.pull_request.base.ref }}
+#             if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/api/'; then
+#               echo "changed=true" >> $GITHUB_OUTPUT
+#             else
+#               echo "changed=false" >> $GITHUB_OUTPUT
+#             fi
+#           else
+#             if git diff --name-only HEAD~1 HEAD | grep -q '^apps/api/'; then
+#               echo "changed=true" >> $GITHUB_OUTPUT
+#             else
+#               echo "changed=false" >> $GITHUB_OUTPUT
+#             fi
+#           fi
 
 
-      - name: Set up Node.js
-        if: steps.api-changes.outputs.changed == 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
-          cache-dependency-path: apps/api/package-lock.json
+#       - name: Set up Node.js
+#         if: steps.api-changes.outputs.changed == 'true'
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '22'
+#           cache: 'npm'
+#           cache-dependency-path: apps/api/package-lock.json
 
-      - name: Install API dependencies
-        if: steps.api-changes.outputs.changed == 'true'
-        working-directory: apps/api
-        run: npm install
+#       - name: Install API dependencies
+#         if: steps.api-changes.outputs.changed == 'true'
+#         working-directory: apps/api
+#         run: npm install
 
-      - name: Run Prettier check on API
-        if: steps.api-changes.outputs.changed == 'true'
-        working-directory: apps/api
-        run: npm run format:check
+#       - name: Run Prettier check on API
+#         if: steps.api-changes.outputs.changed == 'true'
+#         working-directory: apps/api
+#         run: npm run format:check
