--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,44 +2,43 @@ name: Prettier Check
 
 on:
   pull_request:
-    branches: [main, 'development']
+    branches: [main, development]
     paths:
       - 'apps/**'
 
 jobs:
-  check-prettier-website:
-    name: Check Prettier - Website
+  filter-changes:
+    name: Detect app changes
     runs-on: ubuntu-latest
-
+    outputs:
+      website: ${{ steps.filter.outputs.website }}
+      api: ${{ steps.filter.outputs.api }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Check if website files changed
-        id: website-changes
-        run: |
-          echo "Checking changes in apps/website..."
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            git fetch origin ${{ github.event.pull_request.base.ref }}
-            # diff between base and head commits in the PR
-            if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/website/'; then
-              echo "changed=true" >> $GITHUB_OUTPUT
-            else
-              echo "changed=false" >> $GITHUB_OUTPUT
-            fi
-          else
-            # For push events, compare latest two commits
-            if git diff --name-only HEAD~1 HEAD | grep -q '^apps/website/'; then
-              echo "changed=true" >> $GITHUB_OUTPUT
-            else
-              echo "changed=false" >> $GITHUB_OUTPUT
-            fi
-          fi
+      - name: Filter paths
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            website:
+              - 'apps/website/**'
+            api:
+              - 'apps/api/**'
+
+  check-prettier-website:
+    name: Check Prettier - Website
+    runs-on: ubuntu-latest
+    needs: filter-changes
+    if: needs.filter-changes.outputs.website == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        if: steps.website-changes.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -47,7 +46,6 @@ jobs:
           cache-dependency-path: apps/website/package-lock.json
 
       - name: Install website dependencies
-        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: |
           rm -rf node_modules package-lock.json
@@ -56,56 +54,29 @@ jobs:
           npx nuxt prepare
 
       - name: Run Prettier check on website
-        if: steps.website-changes.outputs.changed == 'true'
         working-directory: apps/website
         run: npm run format:check
 
+  check-prettier-api:
+    name: Check Prettier - API
+    runs-on: ubuntu-latest
+    needs: filter-changes
+    if: needs.filter-changes.outputs.api == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-# temporary disabled format check for api to avoid conflicts with existing PRs
-#   check-prettier-api:
-#     name: Check Prettier - API
-#     runs-on: ubuntu-latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: apps/api/package-lock.json
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#         with:
-#           fetch-depth: 0
+      - name: Install API dependencies
+        working-directory: apps/api
+        run: npm install
 
-#       - name: Detect if API files changed
-#         id: api-changes
-#         run: |
-#           echo "Checking changes in apps/api..."
-#           if [ "${{ github.event_name }}" = "pull_request" ]; then
-#             git fetch origin ${{ github.event.pull_request.base.ref }}
-#             if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '^apps/api/'; then
-#               echo "changed=true" >> $GITHUB_OUTPUT
-#             else
-#               echo "changed=false" >> $GITHUB_OUTPUT
-#             fi
-#           else
-#             if git diff --name-only HEAD~1 HEAD | grep -q '^apps/api/'; then
-#               echo "changed=true" >> $GITHUB_OUTPUT
-#             else
-#               echo "changed=false" >> $GITHUB_OUTPUT
-#             fi
-#           fi
-
-
-#       - name: Set up Node.js
-#         if: steps.api-changes.outputs.changed == 'true'
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '22'
-#           cache: 'npm'
-#           cache-dependency-path: apps/api/package-lock.json
-
-#       - name: Install API dependencies
-#         if: steps.api-changes.outputs.changed == 'true'
-#         working-directory: apps/api
-#         run: npm install
-
-#       - name: Run Prettier check on API
-#         if: steps.api-changes.outputs.changed == 'true'
-#         working-directory: apps/api
-#         run: npm run format:check
+      - name: Run Prettier check on API
+        working-directory: apps/api
+        run: npm run format:check
